@@ -1,3 +1,8 @@
+2009-08-15 Holger Vogt
+ * cpitf.c: MS Windows: search for spinit also in local (ngspice.exe) directory
+   cpextern.h: function parameters added in declaration
+   com_alias.h, init.c, cpitf.c, main.c: comments added
+
 2009-08-08 Paolo Nenzi
  * src/frontend/resource.c: applied patch from Thomas D. Dean to remove
    the limit warning.
